--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
 }
 
 body {
     background-color: #fff;
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
 
 header {
@@ -22,6 +24,7 @@ header .top-section {
     justify-content: space-between;
     color: #fff;
     font-size: 16px;
+    font-family: sans-serif;
 }
 
 .backarrow-logo-name,
@@ -83,9 +86,10 @@ header .sort,
     width: 100%;
     background-color: #fff;
     margin: 0;
-    font-size: 12px;
-    letter-spacing: 1px;
+    font-size: 14px;
+    /* letter-spacing: 1px; */
     height: 48px;
+    font-family: none !important;
 }
 
 .filter {
@@ -95,7 +99,7 @@ header .sort,
 .bottom-section .icon {
     height: 24px;
     aspect-ratio: 1;
-    margin-right: 5px;
+    margin-right: 8px;
 }
 
 .bottom-section .icon img {
@@ -105,7 +109,8 @@ header .sort,
 
 .header-shadow {
     width: 100%;
-    z-index: -2;
+    position: absolute;
+    z-index: 10;
     height: 4px;
     margin: 0;
     display: flex;
@@ -118,6 +123,7 @@ header .sort,
 }
 
 .adv {
+    display: none;
     width: 100%;
 }
 
@@ -126,10 +132,173 @@ header .sort,
     height: 100%;
 }
 
+.card {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid rgba(234, 234, 234, 1.00);
+    padding-top: 9px;
+}
 
+.card .mob-details {
+    display: flex;
+    flex-direction: row;
+    padding: 12px 0 12px 0;
+    align-items: flex-end;
+    position: relative;
+    /* background-color: yellow; */
+}
 
-.to-delete {
+.mob-details .mob {
+    /* height: 120px; */
+    min-width: 96px;
+    max-width: 96px;
+    margin-left: 5px;
+    margin-bottom: 11px;
+    height: 114px;
+}
+
+.mob-details .mob img {
     width: 100%;
-    padding: 20px;
+    height: 100%;
+}
+
+.mob-details .details {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 0 20px 0 12px;
+}
+
+.details .head-heart {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    /* background-color: antiquewhite; */
+    /* padding-bottom: 5px; */
+}
+
+.details .head-heart p {
+    font-size: 14px;
+    font-family: sans-serif;
+    /* line-height: 16px; */
+    /* padding-bottom: 14px; */
+}
+
+.heart {
+    width: 36px;
+    height: 36px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    position: absolute;
+    z-index: 20;
+    top: -1px;
+    right: 8px;
+    /* background-color: red; */
+    /* padding: 10px 10px; */
+    /* aspect-ratio: 1; */
+    box-shadow: 0px 1px 3px rgb(0 0 0 / 16%);
+}
+
+.heart img {
+    width: 18px;
+    /* margin: 0 10px; */
+}
+
+.details .rating-plus {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* background-color: pink; */
+    padding: 8px 0 1px 0;
+}
+
+.rating-plus .rating {
+    background-color: rgb(0, 140, 0);
+    border-radius: 4px;
+    font-size: 12px;
+    padding: 3px 4px 3px 6px;
+    text-align: center;
     color: #fff;
+    margin: 0;
+    font-family: none;
+}
+
+.rating-plus .num-customer {
+    color: grey;
+    font-size: 11.5px;
+    /* margin-bottom: 1px; */
+    padding: 0 1px 0 5px;
+}
+
+.rating-plus .plus {
+    height: 13.5px;
+    margin-bottom: 2px;
+    margin-left: 2px;
+}
+
+.rating-plus .plus img {
+    width: 100%;
+    height: 100%;
+}
+
+.amount-details {
+    display: block;
+    font-size: 11px;
+    /* background-color: aquamarine; */
+    padding: 5px 0;
+}
+
+.amount-details .price {
+    text-decoration: line-through;
+    color: grey;
+    margin-bottom: 2px;
+}
+
+.amount-details .amount {
+    font-size: 16px;
+    font-family: none;
+    margin: 0 2px 0 4px;
+
+}
+
+.amount-details .discount {
+    color: rgba(75, 181, 80, 1.00);
+    font-size: none;
+}
+
+.delivery {
+    font-size: 11px;
+    letter-spacing: .3px;
+    /* background-color: darkkhaki; */
+}
+
+.offer-details {
+    font-size: 12px;
+    color: rgba(75, 181, 80, 1.00);
+    /* background-color: sandybrown; */
+    padding: 7px 0;
+    font-family: none;
+}
+
+.card .more-details {
+    display: flex;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+    /* padding-bottom: 1px; */
+}
+
+.card .more-details span {
+    color: grey;
+    font-size: 12px;
+    border: 1px solid #eee;
+    border-radius: 5px;
+    padding: 3px 8px 4px 8px;
+    margin: 0 0 10px 10px;
+    font-family: none;
 }
