--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
     background-color: #fff;
     font-family: 'Roboto', Helvetica, Arial, sans-serif;
+    position: relative;
 }
 
 header {
@@ -72,7 +73,7 @@ header .bottom-section {
 
 header .bottom-section.active {
     position: fixed;
-    top: 0;
+    top: 0px;
     left: 0;
     width: 100%;
     z-index: 30;
@@ -124,8 +125,9 @@ header .sort,
 }
 
 .adv {
-    display: none;
+    /* display: none; */
     width: 100%;
+    display: flex;
 }
 
 .adv img {
@@ -138,6 +140,8 @@ header .sort,
     flex-direction: column;
     border-bottom: 1px solid rgba(234, 234, 234, 1.00);
     padding-top: 9px;
+    /* min-height: 268px; */
+    /* max-height: 268px; */
 }
 
 .card .mob-details {
@@ -291,7 +295,7 @@ header .sort,
     display: flex;
     /* flex-direction: column; */
     flex-wrap: wrap;
-    /* padding-bottom: 1px; */
+    /* padding-bottom: 2px; */
 }
 
 .card .more-details span {
@@ -302,4 +306,41 @@ header .sort,
     padding: 3px 8px 4px 8px;
     margin: 0 0 10px 10px;
     font-family: none;
+}
+
+.sort-menu {
+    position: absolute;
+    display: none;
+    align-items: flex-end;
+    top: 0px;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 20;
+}
+
+.sort-list {
+    width: 100%;
+    background-color: #fff;
+    padding: 10px 0px 28px 0;
+}
+
+.sort-list p {
+    /* background-color: gold; */
+    color: #878787;
+    padding: 2px 10px 12px 12px;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 8px;
+}
+
+.sort-list label {
+    width: 100%;
+    /* background-color: yellow; */
+    display: flex;
+    font-family: none;
+    font-size: 14px;
+    justify-content: space-between;
+    padding: 10px 12px;
 }
