--- a/style.css
+++ b/style.css
@@ -405,11 +405,16 @@ a {
     margin-right: 19px;
 }
 
-.header-desktop-view {
+.header-desktop-view,
+.main-desktop {
     display: none;
 }
 
 @media screen and (min-width:1024px) {
+
+    body {
+        background-color: #F1F3F6;
+    }
 
     header .top-section,
     header .bottom-section,
@@ -422,11 +427,17 @@ a {
         height: 56px;
         display: flex;
         align-items: center;
+        justify-content: center;
+        color: white;
+        font-weight: 500;
+        font-size: 17px;
+        box-shadow: 0 2px 2.5px 0 rgba(0, 0, 0, .3);
     }
 
     .flip-plus {
         display: flex;
         flex-direction: column;
+        /* background-color: yellow; */
     }
 
     .flip {
@@ -444,7 +455,6 @@ a {
         font-style: italic;
         color: white;
         height: 100%;
-
     }
 
     .plus-text {
@@ -453,7 +463,7 @@ a {
 
     .plus img {
         width: 10px;
-        margin-bottom: 12px;
+        /* margin-bottom: 12px; */
         aspect-ratio: 1;
         object-fit: contain;
     }
@@ -465,8 +475,10 @@ a {
         justify-content: space-between;
         height: 36px;
         border: none;
-        box-shadow: 0 2px 4px 0rgba(0, 0, 0, .23);
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .23);
         max-width: 564px;
+        margin: 0 20px 0 10px;
+        /* Adjust the margin for the image logo */
     }
 
     .search-box input {
@@ -476,14 +488,87 @@ a {
     }
 
     .search-box input:focus {
-        /* border: none; */
         outline: none;
+    }
+
+    .search-box::placeholder {
+        font-size: 16px;
     }
 
     .btn-search {
         background-color: white;
         border: none;
-        margin: 0 10px 0 10px;
+        margin: 0 20px 0 10px;
+    }
+
+    .login-btn button {
+        border: none;
+        background-color: white;
+        color: #2874F0;
+        font-size: 15px;
+        font-weight: bold;
+        /* padding: 0 10px 0 10px; */
+        padding: 5px 40px;
+        margin: 0 30px 0 20px;
+        /* Adjust the search bar login and seller */
+        border: 1px solid#878787;
+    }
+
+    .more {
+        display: flex;
+        align-items: center;
+        /* background-color: red; */
+        padding: 5px 20px;
+        margin: 0 15px 0 15px;
+        /* Adjust the seller more and cart */
+    }
+
+    .more svg {
+        rotate: 270deg;
+        margin-left: 10px;
+        margin-top: 3px;
+    }
+
+    .main-desktop {
+        display: block;
+        position: relative;
+    }
+
+    .dropdown-list {
+        position: absolute;
+        width: 100%;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #fff;
+        font-size: 13px;
+        font-weight: bold;
+        padding: 0 330px;
+        z-index: 2;
+        box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
+    }
+
+    .dropdown-list span {
+        white-space: nowrap;
+    }
+
+    .dropdown-list a {
+        width: unset;
+    }
+
+    .arrow-down {
+        transform: rotate(270deg);
+        margin-left: 5px;
+    }
+
+    .arrow-down.active {
+        transform: rotate(90deg);
+    }
+
+    .arrow-down-path {
+        fill: #878787;
+        opacity: .5;
     }
 
 }
