--- a/style.css
+++ b/style.css
@@ -423,6 +423,11 @@ a {
     }
 
     .header-desktop-view {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 100%;
         background-color: #2874F0;
         height: 56px;
         display: flex;
@@ -431,7 +436,7 @@ a {
         color: white;
         font-weight: 500;
         font-size: 17px;
-        box-shadow: 0 2px 2.5px 0 rgba(0, 0, 0, .3);
+        /* box-shadow: 0 2px 2.5px 0 rgba(0, 0, 0, .3); */
     }
 
     .flip-plus {
@@ -536,6 +541,7 @@ a {
 
     .dropdown-list {
         position: absolute;
+        margin-top: 56px;
         width: 100%;
         height: 40px;
         display: flex;
@@ -545,16 +551,26 @@ a {
         font-size: 13px;
         font-weight: bold;
         padding: 0 330px;
-        z-index: 2;
+        z-index: 0;
         box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
     }
 
     .dropdown-list span {
         white-space: nowrap;
+        cursor: pointer;
+    }
+
+    .dropdown-list span.active {
+        color: #2874F0
     }
 
     .dropdown-list a {
         width: unset;
+        cursor: pointer;
+    }
+
+    .dropdown-list a.active {
+        color: #2874F0;
     }
 
     .arrow-down {
@@ -562,13 +578,55 @@ a {
         margin-left: 5px;
     }
 
-    .arrow-down.active {
+    .dropdown-list span.active .arrow-down {
         transform: rotate(90deg);
     }
 
     .arrow-down-path {
         fill: #878787;
         opacity: .5;
+    }
+
+    .dropdown-list span.active .arrow-down-path {
+        fill: #2874F0;
+    }
+
+    .header-empty {
+        height: 104px;
+        width: 100%;
+        background-color: #F1F3F6;
+    }
+
+    .filter-section-main {
+        display: flex;
+
+    }
+
+    .filter-section-left {
+        max-width: 364px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        background-color: #F1F3F6;
+        /* border: 1px solid black; */
+    }
+
+    .grab-best {
+        /* width: 80%; */
+        background-color: white;
+        box-shadow: 0 1px 8px 0 rgb(0 0 0 / 6%);
+
+    }
+
+    .grab-best img {
+        width: 100%;
+        border-bottom: 1px solid #F1F3F6;
+    }
+
+    .todelete {
+        height: 5000px;
+        width: 100%;
+        background-color: wheat;
     }
 
 }
