--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
     box-sizing: border-box;
@@ -448,11 +448,17 @@ a {
     .flip-plus {
         display: flex;
         flex-direction: column;
+        /* position: relative; */
         /* background-color: yellow; */
+        margin-right: 12px;
     }
 
     .flip {
         width: 75px;
+    }
+
+    .flip a {
+        display: flex;
     }
 
     .flip img {
@@ -466,10 +472,12 @@ a {
         font-style: italic;
         color: white;
         height: 100%;
+        margin-top: -5px;
     }
 
     .plus-text {
         color: #ffe500;
+        font-weight: 600;
     }
 
     .plus img {
@@ -488,7 +496,7 @@ a {
         border: none;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .23);
         max-width: 564px;
-        margin: 0 20px 0 10px;
+        margin: 0 30px 0 0;
         /* Adjust the margin for the image logo */
     }
 
@@ -519,9 +527,8 @@ a {
         font-size: 15px;
         font-weight: bold;
         /* padding: 0 10px 0 10px; */
-        padding: 5px 40px;
-        margin: 0 30px 0 20px;
-        /* Adjust the search bar login and seller */
+        padding: 8px 40px;
+        margin: 0 20px 0 20px;
         border: 1px solid#878787;
     }
 
@@ -529,9 +536,7 @@ a {
         display: flex;
         align-items: center;
         /* background-color: red; */
-        padding: 5px 20px;
-        margin: 0 15px 0 15px;
-        /* Adjust the seller more and cart */
+        margin: 0 30px;
     }
 
     .more svg {
@@ -604,12 +609,12 @@ a {
 
     .main-section-container {
         display: flex;
-        margin: 0 10px;
-
+        max-width: 1680px !important;
+        margin: 0 auto;
     }
 
     .filter-section {
-        max-width: 350px;
+        max-width: 286px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -713,6 +718,99 @@ a {
         cursor: default;
     }
 
+    .mobile-section-container {
+        display: block;
+    }
 
+    .mobile-card {
+        display: block;
+        padding: 24px 0px 30px 24px;
+    }
 
+    .mobile-img-details-price {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .mobile-img-details {
+        display: flex;
+    }
+
+    .mobile-img {
+        position: relative;
+        display: flex;
+    }
+
+    .mobile-img img {
+        height: 200px;
+        margin: 0 10px;
+    }
+
+    .heart-desktop path {
+        fill: #C8C8C8;
+    }
+
+    .mobile-details {
+        padding-left: 10px;
+    }
+
+    .mobile-details .heading {
+        font-size: 18px;
+        font-weight: 500;
+    }
+
+    .mobile-details .rating-reviews {
+        padding-bottom: 13px;
+    }
+
+    .mobile-details .rating {
+        background-color: #388E3C;
+        color: white;
+        padding: 4px 8px;
+        border-radius: 4px;
+        font-size: 10px;
+        font-weight: bold;
+    }
+
+    .mobile-details span {
+        color: #878787;
+        font-weight: 500;
+        font-size: 14px;
+    }
+
+    .mobile-details ul {
+        list-style: none;
+    }
+
+    .mobile-details ul li {
+        color: #000;
+        font-size: 14px;
+        padding: 2px 4px;
+    }
+
+    .mobile-details ul li::before {
+        content: '\2022';
+        color: #878787;
+        opacity: .5;
+        font-weight: bold;
+        padding-right: 8px;
+    }
+
+    .mobile-price {
+        margin-right: 300px;
+    }
+
+    .mobile-price .flip-assured {
+        display: flex;
+    }
+
+    .mobile-price .flip-assured img {
+        width: 77px;
+        margin-left: 20px;
+    }
+
+    .mobile-price .flip-assured .selling-price {
+        font-size: 20px;
+        font-weight: 500;
+    }
 }
